Inject faq question and answers into about template using dtl for loop

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -95,13 +95,13 @@
 
                 <div class=" mx-auto mb-5 w-100" id="faq-accordion">
                     <div class="card">
-
+                        {% for faq in faqs %}
                         <!-- Accordiong header containing question text -->
                         <div class="card-header border-0" id="headingOne">
                             <h2 class="mb-0">
-                                <button class="accordion-btn btn btn-link w-100 text-left" type="button" data-toggle="collapse"
-                                    data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Is this a test question?
+                                <button class="accordion-btn btn btn-link w-100 text-left collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                    {{ faq.faq_question }}
                                 </button>
                             </h2>
                         </div>
@@ -110,17 +110,10 @@
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                             data-parent="#faq-accordion">
                             <div class="accordion-card-body purple-text border-0">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-                                squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-                                quinoa
-                                nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid
-                                single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
-                                beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
-                                vice
-                                lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
-                                probably haven't heard of them accusamus labore sustainable VHS.
+                                {{ faq.faq_answer }}
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
 
 
