--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,9 +22,9 @@
     <!-- Chocelegance logo placed in hero container, will only be displayed on mobile, from index.html -->
     <div id="mobile-logo" class="d-block d-sm-block d-md-block d-lg-none">
         <a href="{% url 'home' %}" class="nav-link d-inline-flex">
-          <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084;</span>
+            <h2 class=""><strong>chocelegance</strong></h2><span class="small mobile-logo-heart">&#10084;</span>
         </a>
-      </div>
+    </div>
 
 
 
@@ -32,7 +32,7 @@
     <div id="hero-image-text-heading">
         <p>
             It's time to<br><strong>treat*</strong><br>yourself!
-        <p>
+            <p>
     </div>
 
     <!-- Hero image sub text, from index.html -->
@@ -49,6 +49,80 @@
         </p>
     </div>
 
+</div>
+
+
+<!-- Testimonial carousel -->
+
+
+
+
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+
+    <div class="carousel-inner">
+
+        <!-- Loops through Testimonial mode -->
+        {% for testimonial in testimonials %}
+
+        {% if forloop.first %}
+        <!-- DTL If statement will determine if testimonial is first in the loop and apply the 'active' attribute if it is -->
+        <div class="carousel-item active">
+            <!-- Testimonial displayed in blockquote -->
+            <figure>
+                <blockquote class="blockquote purple-text">
+                    <p>
+                        "{{ testimonial.testimonial_text }}"
+                    </p>
+                </blockquote>
+
+                <figcaption class="blockquote-footer bright-purple-text">
+                    {{ testimonial.testimonial_user_display }}
+                    <span>
+                        , {{ testimonial.testimonial_date }}
+                    </span>
+                </figcaption>
+            </figure>
+        </div>
+        {% else %}
+        <div class="carousel-item">
+            <!-- Testimonial displayed in blockquote -->
+            <figure>
+                <blockquote class="blockquote purple-text">
+                    <p>
+                        "{{ testimonial.testimonial_text }}"
+                    </p>
+                </blockquote>
+
+                <figcaption class="blockquote-footer bright-purple-text">
+                    {{ testimonial.testimonial_user_display }}
+                    <span>
+                        , {{ testimonial.testimonial_date }}
+                    </span>
+                </figcaption>
+            </figure>
+        </div>
+
+
+
+
+        {% endif %}
+
+
+
+        {% endfor %}
+    </div>
+
+
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon purple-text" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next purple-text" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon purple-text" aria-hidden="true"></span>
+        <span class="sr-only bright-purple-text">Next</span>
+    </a>
+    
 </div>
 
 
