Add testimonials heading to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,13 +52,20 @@
 </div>
 
 
+
+
+<div class="testimonial-header">
+    <h3 class="purple-text text-center font-weight-bold mt-5">Testimonials</h3>
+    <p class="purple-text text-center mt-3">
+        We like to think we offer the best hand crafted, <strong class="bright-purple-text">diet friendly</strong> chocolates in town. But we also think that self
+        praise, is no praise.
+    </p>
+    <p class="purple-text text-center mt-1">
+        So read what our customers have to say about us instead!
+    </p>
+</div>
 <!-- Testimonial carousel -->
-
-
-
-
-
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide my-5 px-3" data-ride="carousel">
 
     <div class="carousel-inner">
 
@@ -122,7 +129,7 @@
         <span class="carousel-control-next-icon purple-text" aria-hidden="true"></span>
         <span class="sr-only bright-purple-text">Next</span>
     </a>
-    
+
 </div>
 
 
