Fix typo in about.html

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -51,7 +51,7 @@
             <p class="purple-text">
                 This was already the vision of founder Carol Ruiterman when, in 2017, she opened a dessert shop in
                 Amsterdam with her daughter Sabine. With the belief that they could improve the taste of chocolate with
-                their own unique perspective and creativity. While also offering innovative recipes that caters to the
+                their own unique perspective and creativity. While also offering innovative recipes that cater to the
                 evolving dietary requirements of chocolate lovers!
                 <br>
                 <br>
