Fix color style of quotation marks in carousel

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -94,7 +94,7 @@
             <!-- Testimonial displayed in blockquote -->
             <figure>
                 <blockquote class="blockquote purple-text">
-                        "{{ testimonial.testimonial_text }}"
+                    <strong class="bright-purple-text">"</strong> {{ testimonial.testimonial_text }} <strong class="bright-purple-text">"</strong>
                 </blockquote>
 
                 <figcaption class="blockquote-footer bright-purple-text">
