Fix color style of quotation marks in about page

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -32,10 +32,10 @@
             <figure>
                 <blockquote class="blockquote purple-text">
                     <p>
-                        "Every individual piece of chocolate crafted at Chocelegance is intended to be a unique
+                        <strong class="bright-purple-text">"</strong> Every individual piece of chocolate crafted at Chocelegance is intended to be a unique
                         experience. A symphony of delight, rich in flavour and a celebration of taste. When
                         you eat our chocolates, you should taste all the notes that our organic cocoa beans have to
-                        offer!"
+                        offer! <strong class="bright-purple-text">"</strong>
                     </p>
                 </blockquote>
 
